# biofm-eval

./: README.md  pyproject.toml
biofm_eval/: __init__.py  data_utils.py  embedder.py
biofm_eval/annotators/: __init__.py  base.py
biofm_eval/models/: __init__.py
biofm_eval/tokenizers/: base.py
src/biofm_eval/: __init__.py  data_utils.py  embedder.py  generator.py
src/biofm_eval/models/: base.py
src/biofm_eval/tokenizers/: __init__.py
